[Eir] update RenderWare API with native C++ routines; updated RenderWare struct definitions; updated gamesa_renderware.h function definitions; internalized the RenderWare interface (no more export of RenderWare struct data to deathmatch); replaced CMatrix_Padded with RwMatrix; updated game code with new matrix math (RwMatrix has routines to calculate with euler angles, no need for GTA:SA matrix conversion code anymore?); added LIST macros for easy GTA:SA RenderWare list management (used in multiple occassions, for instance XYZ class); [This patch prepares inclusion of trivial model loader code, still not done with preparation, next is basemodelinfo];

--- a/branches/2.0.0/MTA10/game_sa/_game_sa 2008.vcproj
+++ b/branches/2.0.0/MTA10/game_sa/_game_sa 2008.vcproj
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="Windows-1252"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="9.00"
+	Version="9,00"
 	Name="Client - Game SA"
 	ProjectGUID="{E13D1441-438B-4A03-AB79-5E8EF08EE414}"
 	RootNamespace="Client - Game SA"
@@ -665,6 +665,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\CRenderWareSA.rwapi.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\CRenderWareSA.ShaderMatching.cpp"
 				>
 			</File>
@@ -1226,6 +1230,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\CRenderWareSA.rwapi.h"
+				>
+			</File>
+			<File
 				RelativePath=".\CRenderWareSA.ShaderMatching.h"
 				>
 			</File>
@@ -1347,6 +1355,10 @@
 			</File>
 			<File
 				RelativePath=".\HookSystem.h"
+				>
+			</File>
+			<File
+				RelativePath=".\RenderWare.h"
 				>
 			</File>
 			<File
