[Eir] follow-up to r5168; added rwapi documentation; fixed developer info (now using my real name); RwV3d and RwV2d now point to CVector and CVector2d; moved RenderWare_shared.h into clientside game sdk; [attempt to fix ijsf concerns, will start basemodelinfo patch next week]

--- a/branches/2.0.0/MTA10/core/_Core 2008.vcproj
+++ b/branches/2.0.0/MTA10/core/_Core 2008.vcproj
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="Windows-1252"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="9.00"
+	Version="9,00"
 	Name="Client - Core"
 	ProjectGUID="{4C71249E-EA08-4A3D-9AEF-28707ACC6531}"
 	RootNamespace="Client - Core"
@@ -1669,6 +1669,10 @@
 					</File>
 					<File
 						RelativePath="..\..\MTA10\sdk\game\RenderWare.h"
+						>
+					</File>
+					<File
+						RelativePath="..\sdk\game\RenderWare_shared.h"
 						>
 					</File>
 					<File
