[Eir]: another maintenance update (to get things going) - improved col model loading (exterminated wild collision loading completely) - added CStreamingSA.runtime.cpp/.h (GTA:SA threaded IMG archive resource loader) - improved model id dispatching (now using inlined template struct ModelCheckDispatch); this enables modularity in model id logic (less rewriting code) - fixed hooks to shader system - improved CPoolsSA logic (now using C arrays) - WARNING: local player is slot 0 in ppPedPool ! (previously ref 1?) - fixed vehicle alpha 100 clip (now any alpha is possible - fixed vehicle material double processing (transparent vehicle would be uneven; wheels did disappear faster since geometry occurs four times) - added entity render logic - extended GTA:SA render limits (CEntitySA.render.cpp, 50 translucent atomics possible in vehicle model now, etc) - improved vehicle rendering: it is now tied to the FX Quality setting  -> very high: LOD is not rendered  -> high/very high: rendering models in HQ mode (less alpha bugs, sorting) - added modelId_t type for a determined and fast model id transfer (see note at definition) - fixed EU crash (related to wild hooking, will have to investigate further) - added RenderWare RenderState management logic: now you can force specific Direct3D RenderStates into the renderer by using RwRenderStateLock (please use RwD3D9SetRenderState for RenderState changes now as it is the official API; see documentation). - added critical comment on design decision (CPedSA.cpp) - LoadAllRequestedModels, anyone? I added the logic surrounding it (WIP) - specific changes to global classes for compatibility (CQuat, ...) - rwapi changes:  -> RwFrame::RegisterRoot changed to RwFrame::Update  -> render chains no longer part of RenderWare  -> extended material logic  -> added free lists (more in next patch :P )
I worked on this patch for so long that I (probably) have not listed all the changes.
Will work on smaller patches from now on (to keep overview better)

--- a/forks/eir/MTA10/game_sa/_game_sa 2008.vcproj
+++ b/forks/eir/MTA10/game_sa/_game_sa 2008.vcproj
@@ -476,6 +476,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\CEntitySA.render.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\CEntryInfoSA.cpp"
 				>
 			</File>
@@ -768,6 +772,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\CStreamingSA.runtime.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\CStreamingSA.utils.cpp"
 				>
 			</File>
@@ -825,6 +833,10 @@
 			</File>
 			<File
 				RelativePath="CVehicleSA.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\CVehicleSA.render.cpp"
 				>
 			</File>
 			<File
@@ -1137,6 +1149,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\CEntitySA.render.h"
+				>
+			</File>
+			<File
 				RelativePath=".\CEntryInfoSA.h"
 				>
 			</File>
@@ -1429,7 +1445,15 @@
 				>
 			</File>
 			<File
+				RelativePath=".\CStreamingSA.runtime.h"
+				>
+			</File>
+			<File
 				RelativePath=".\CStreamingSA.utils.h"
+				>
+			</File>
+			<File
+				RelativePath=".\CStreamingSA.utils.hxx"
 				>
 			</File>
 			<File
@@ -1486,6 +1510,10 @@
 			</File>
 			<File
 				RelativePath="CVehicleSA.h"
+				>
+			</File>
+			<File
+				RelativePath=".\CVehicleSA.render.h"
 				>
 			</File>
 			<File
