[eir]: more RenderWare modules! - updated RwInterface definition - added RenderWare memory system (CRenderWareSA.mem.cpp) - added RenderWare frame synchronization (CRenderWareSA.render.cpp) - fixed LoadAllRequestedModel pulse count (now like GTA:SA, previously infinite till termination)

--- a/forks/eir/MTA10/game_sa/_game_sa 2008.vcproj
+++ b/forks/eir/MTA10/game_sa/_game_sa 2008.vcproj
@@ -716,7 +716,15 @@
 				>
 			</File>
 			<File
+				RelativePath=".\CRenderWareSA.mem.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\CRenderWareSA.pipeline.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\CRenderWareSA.render.cpp"
 				>
 			</File>
 			<File
@@ -1393,7 +1401,15 @@
 				>
 			</File>
 			<File
+				RelativePath=".\CRenderWareSA.mem.h"
+				>
+			</File>
+			<File
 				RelativePath=".\CRenderWareSA.pipeline.h"
+				>
+			</File>
+			<File
+				RelativePath=".\CRenderWareSA.render.h"
 				>
 			</File>
 			<File
